force-app/main/default/objects/Opportunity/fields/Bill_To_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Email_Date__c</fullName>
    <label>Bill To Email Date</label>
    <type>DateTime</type>
</CustomField>