force-app/main/default/objects/Opportunity/fields/Bill_To_Print_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Print_Date__c</fullName>
    <label>Bill To Print Date</label>
    <type>DateTime</type>
</CustomField>