force-app/main/default/objects/Opportunity/fields/Copy1_Print_Date__c.field-meta.xml
<CustomField>
    <fullName>Copy1_Print_Date__c</fullName>
    <label>Copy1 Print Date</label>
    <type>DateTime</type>
</CustomField>