force-app/main/default/objects/Opportunity/fields/Copy2_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Copy2_Email_Date__c</fullName>
    <label>Copy2 Email Date</label>
    <type>DateTime</type>
</CustomField>