force-app/main/default/objects/Opportunity/fields/Copy2_Print_Date__c.field-meta.xml
<CustomField>
    <fullName>Copy2_Print_Date__c</fullName>
    <label>Copy2 Print Date</label>
    <type>DateTime</type>
</CustomField>