force-app/main/default/objects/Opportunity/fields/Date_Time_Synced__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Synced__c</fullName>
    <label>Date/Time Synced</label>
    <type>DateTime</type>
</CustomField>