force-app/main/default/objects/Opportunity/fields/Days_Aging__c.field-meta.xml
<CustomField>
    <fullName>Days_Aging__c</fullName>
    <formula>if( text(Payment_Status__c) =&quot;Open&quot;,today()-CloseDate ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Aging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>