force-app/main/default/objects/Opportunity/fields/Days_Aging_Range__c.field-meta.xml
<CustomField>
    <fullName>Days_Aging_Range__c</fullName>
    <formula>If(AND(Days_Aging__c &gt;1,Days_Aging__c&lt;31),&quot;1-30 Days&quot;,if(AND(Days_Aging__c &gt;30, Days_Aging__c&lt;61),&quot;31-60 Days&quot;,If(AND(Days_Aging__c &gt;60 , Days_Aging__c&lt;90),&quot;61-90 Days&quot;,if(Days_Aging__c&gt;90,&quot;90+ Days&quot;,&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Aging Range</label>
    <type>Text</type>
</CustomField>