force-app/main/default/objects/Opportunity/fields/Export_ID__c.field-meta.xml
<CustomField>
    <fullName>Export_ID__c</fullName>
    <label>Export ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>