force-app/main/default/objects/Opportunity/fields/Internal_Billing__c.field-meta.xml
<CustomField>
    <fullName>Internal_Billing__c</fullName>
    <formula>Service_Enrollment__r.Internal_Billing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Billing</label>
    <type>Text</type>
</CustomField>