force-app/main/default/objects/Opportunity/fields/Invoice_Attention_To__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Attention_To__c</fullName>
    <formula>if(isblank(Service_Enrollment__c),Contact__r.FirstName + &quot; &quot;+Contact__r.LastName,Service_Enrollment__r.Billing_Attention_To__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Attention To</label>
    <type>Text</type>
</CustomField>