force-app/main/default/objects/Opportunity/fields/Invoice_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Billing_City__c</fullName>
    <formula>if(isblank(Service_Enrollment__c),Account.BillingCity,Service_Enrollment__r.Billing_City__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Billing City</label>
    <type>Text</type>
</CustomField>