force-app/main/default/objects/Opportunity/fields/Invoice_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Billing_State__c</fullName>
    <formula>if(isblank(Service_Enrollment__c),Account.BillingState,text(Service_Enrollment__r.Billing_State__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Billing State</label>
    <type>Text</type>
</CustomField>