force-app/main/default/objects/Opportunity/fields/Invoice_Billing_Street1__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Billing_Street1__c</fullName>
    <formula>if(isblank(Service_Enrollment__c),Account.BillingStreet,Service_Enrollment__r.Billing_Street_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Billing Street 1</label>
    <type>Text</type>
</CustomField>