force-app/main/default/objects/Opportunity/fields/Invoice_Billing_Street2__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Billing_Street2__c</fullName>
    <formula>if(isblank(Service_Enrollment__c),&quot;&quot;,Service_Enrollment__r.Billing_Street_2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Billing Street 2</label>
    <type>Text</type>
</CustomField>