force-app/main/default/objects/Opportunity/fields/Invoice_Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Billing_Zip__c</fullName>
    <formula>if(isblank(Service_Enrollment__c),Account.BillingPostalCode,Service_Enrollment__r.Billing_Zip_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Billing Zip</label>
    <type>Text</type>
</CustomField>