force-app/main/default/objects/Opportunity/fields/Invoice_Number2__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number2__c</fullName>
    <displayFormat>CFPDSF-{YY}{00000}</displayFormat>
    <label>Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>