force-app/main/default/objects/Opportunity/fields/Invoice_Printed_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Printed_Date__c</fullName>
    <label>Invoice Printed Date</label>
    <type>Date</type>
</CustomField>