force-app/main/default/objects/Opportunity/fields/Is_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Complete</label>
    <type>Checkbox</type>
</CustomField>