force-app/main/default/objects/Opportunity/fields/Mail_To_Print_Date__c.field-meta.xml
<CustomField>
    <fullName>Mail_To_Print_Date__c</fullName>
    <label>Mail To Print Date</label>
    <type>DateTime</type>
</CustomField>