force-app/main/default/objects/Opportunity/fields/Payment_Batch__c.field-meta.xml
<CustomField>
    <fullName>Payment_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Batch</label>
    <referenceTo>Batch_Payment__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>