force-app/main/default/objects/Opportunity/fields/Quickbooks_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Account_ID__c</fullName>
    <formula>if(isblank( Service_Enrollment__c ), Account.QuickbooksInternalAccountID__c , Service_Enrollment__r.Quickbooks_Internal_Account_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quickbooks Account ID</label>
    <type>Text</type>
</CustomField>