force-app/main/default/objects/Opportunity/fields/Quickbooks_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Display_Name__c</fullName>
    <formula>if(isblank( Service_Enrollment__c) , Account.Quickbooks_Display_Name__c , Service_Enrollment__r.Quickbooks_Display_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quickbooks Display Name</label>
    <type>Text</type>
</CustomField>