force-app/main/default/objects/Opportunity/fields/Service_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Number__c</fullName>
    <formula>Service_Enrollment__r.Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>