force-app/main/default/objects/Opportunity/fields/True_Link_ID__c.field-meta.xml
<CustomField>
    <fullName>True_Link_ID__c</fullName>
    <formula>Service_Enrollment__r.Trust__r.True_Link_ID_from_TL_Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>True Link ID</label>
    <type>Text</type>
</CustomField>