force-app/main/default/objects/Opportunity/fields/Trust_Portfolio_Name__c.field-meta.xml
<CustomField>
    <fullName>Trust_Portfolio_Name__c</fullName>
    <formula>Service_Enrollment__r.Trust__r.Trust_Portfolio__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust Portfolio Name</label>
    <type>Text</type>
</CustomField>