force-app/main/default/objects/Opportunity/fields/Trust_Type__c.field-meta.xml
<CustomField>
    <fullName>Trust_Type__c</fullName>
    <formula>Service_Enrollment__r.Trust__r.Pooled_Trust__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust Type</label>
    <type>Text</type>
</CustomField>