force-app/main/default/objects/Opportunity/recordTypes/Client_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Client_Invoice</fullName>
    <active>true</active>
    <businessProcess>Client Invoices</businessProcess>
    <label>Client Invoice</label>
</RecordType>